@@ -5,6 +5,7 @@ https://github.com/jythontools/jython
 
 Development tip
   Bugs fixed
+    - [ 2768 ] Allow bytearray + and += to accept buffer protocol objects
     - [ 2742 ] JARs for bouncycastle out of date (upgrade to 1.16)
     - [ 2762 ] Upgrade Apache commons-compress to 1.18
     - [ GH-108 ] Updates to JNR/JFFI to improve ARM HF support
